<resources>
    <string name="app_name">Тестирование регистрации</string>
    <string name="registration_title">Регистрация</string>
    <string name="register_button">Зарегистрироваться</string>
    <string name="input_email_tooltip">Введите адрес эл. почты</string>
    <string name="input_password_tooltip">Введите пароль</string>
    <string name="confirm_password_tooltip">Подтвердить пароль</string>
</resources>